# edge-neural-network-offloading-mqtt

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: commons.py  device_inference_times.json  edge_inference_times.json  layer_sizes.json
src/edge/: edge_initialization.py  run_edge.py
src/evaluations/: edit_evaluations.ipynb  evaluations.csv
src/models/: model_build_split.py  model_manager.py  model_manager_config.py
src/models/resnet_model/: resnet_model.keras
src/models/resnet_model/layers/h/: layer_0.h  layer_1.h  layer_2.h  layer_3.h  layer_4.h
src/models/resnet_model/layers/keras/: submodel_0.keras  submodel_1.keras  submodel_2.keras  submodel_3.keras  submodel_4.keras
src/models/resnet_model/layers/tflite/: submodel_0.tflite  submodel_1.tflite  submodel_2.tflite  submodel_3.tflite  submodel_4.tflite
src/mqtt_client/: __init__.py  mqtt_client.py  mqtt_configs.py  mqtt_custom_message.py
src/offloading_algo/: offloading_algo.py
tests/: commons.py  conftest.py
tests/fixtures/: mqtt_client_fixture.py  offloading_fixtures.py
tests/test_mqtt_client/: test_mqtt_client.py
tests/test_offloading_algo/: test_offloading_algo.py
tests/test_samples/: device_inference_times.json  edge_inference_times.json
